Change notification bar position from absolute to fixed for better visibility

--- a/src/notifications.scss
+++ b/src/notifications.scss
@@ -2,7 +2,7 @@
 .notification-bar,
 #top-popup {
   @include flex-layout();
-  position: absolute !important;
+  position: fixed !important;
   left: unset !important;
   right: 5px !important;
   background: $black !important;
